--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
-<app-data-export></app-data-export>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button
+      type="button"
+      aria-label="Toggle sidenav"
+      mat-icon-button
+      (click)="drawer.toggle()"
+      *ngIf="currentUser">
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+    <span>Sauron Web Interface</span>
+    <span class='app-spacer'></span>
+    <button *ngIf="currentUser" mat-button (click)="logout()">Logout {{currentUser.username}}</button>
+    <!--<span><img src="./assets/devglan.png"></span>-->
+  </mat-toolbar-row>
+</mat-toolbar>
+<mat-sidenav-container class="app-sidenav-container">
+  <mat-sidenav class="app-sidenav" #drawer mode="side" opened role="navigation" *ngIf="currentUser">
+    <app-navigation></app-navigation>
+  </mat-sidenav>
+  <mat-sidenav-content class="app-sidenav-content">
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
