--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,8 +4,7 @@
 
 .app-sidenav {
   outline-width: 1px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 40px;
 }
 
 :host {
@@ -19,4 +18,8 @@
 
 .app-sidenav-content {
   padding: 20px 50px 50px 20px;
+}
+
+.app-root {
+  height: 100%;
 }
