--- a/src/app/pages/data-export/data-export.component.html
+++ b/src/app/pages/data-export/data-export.component.html
@@ -1,90 +1,90 @@
-<mat-card class='app-data-export-card'>
-  <mat-card-title>Data Export Templates</mat-card-title>
-  <mat-card-subtitle>
-    <button mat-button color="primary" (click)="newTemplate()">
-      <mat-icon aria-label="playlist_add">playlist_add</mat-icon>
-      Add new template
-    </button>
-  </mat-card-subtitle>
-  <mat-card-content>
-    <mat-nav-list>
-        <mat-list-item *ngFor="let template of templates">
-            <span class="data-export-template-name">{{template.name}}</span>
-            <mat-action-row>
-                <button mat-button color="primary" (click)="edit(template)">
-                    <mat-icon aria-label="edit">edit</mat-icon>
-                    Edit
-                  </button>
-                  <button mat-button color="primary" (click)="execute(template)">
-                    <mat-icon aria-label="send">send</mat-icon>
-                    Execute
-                  </button>
+<h1>Data Export Templates</h1>
+<div mat-dialog-actions align="end">
+  <button mat-button color="primary" (click)="newTemplate()">
+    <mat-icon aria-label="add">add</mat-icon>
+    Add new template
+  </button>
+</div>
+<mat-list>
+  <mat-divider></mat-divider>
+  <div cdkDrag *ngFor="let template of templates">
+    <mat-list-item disableRipple="true">
+      <div class="data-export-template-name">{{ template.name }}</div>
+      <mat-action-row>
+        <button mat-button color="primary" (click)="edit(template)">
+          <mat-icon aria-label="edit">edit</mat-icon>
+          Edit
+        </button>
+        <button mat-button color="primary" (click)="execute(template)">
+          <mat-icon aria-label="send">send</mat-icon>
+          Execute
+        </button>
 
-                  <button mat-button color="warn" (click)="delete(template)">
-                    <mat-icon aria-label="Delete">delete</mat-icon>
-                    Delete
-                  </button>
-            </mat-action-row>
-            </mat-list-item>
-          <!--
-          <mat-panel-description>
-            Type your name and age
-          </mat-panel-description>
-        </mat-expansion-panel-header>
+        <button mat-button color="warn" (click)="delete(template)">
+          <mat-icon aria-label="Delete">delete</mat-icon>
+          Delete
+        </button>
+      </mat-action-row>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+  </div>
+  <!--
+      <mat-panel-description>
+        Type your name and age
+      </mat-panel-description>
+    </mat-expansion-panel-header>
 
-        <mat-form-field class="app-form-element">
-          <input matInput placeholder="Template name" disabled="true" value="1st template">
-        </mat-form-field>
+    <mat-form-field class="app-form-element">
+      <input matInput placeholder="Template name" disabled="true" value="1st template">
+    </mat-form-field>
 
-        <div class="form-element">
-          <mat-checkbox formControlName="validate" value="1" disabled="true">
-            Delete Source
-          </mat-checkbox>
-        </div>
-        <mat-divider></mat-divider>
-        <mat-card-subtitle>
-          <button mat-button color="primary" (click)="newTemplate()">
-            <mat-icon aria-label="playlist_add">playlist_add</mat-icon>
-            Add new path
-          </button>
-        </mat-card-subtitle>
-        <mat-card-content>
-          <mat-accordion class="example-headers-align">
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Paths
-                </mat-panel-title>
-              </mat-expansion-panel-header>
+    <div class="form-element">
+      <mat-checkbox formControlName="validate" value="1" disabled="true">
+        Delete Source
+      </mat-checkbox>
+    </div>
+    <mat-divider></mat-divider>
+    <mat-card-subtitle>
+      <button mat-button color="primary" (click)="newTemplate()">
+        <mat-icon aria-label="playlist_add">playlist_add</mat-icon>
+        Add new path
+      </button>
+    </mat-card-subtitle>
+    <mat-card-content>
+      <mat-accordion class="example-headers-align">
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Paths
+            </mat-panel-title>
+          </mat-expansion-panel-header>
 
-              <mat-form-field class="app-form-element">
-                <input matInput placeholder="Template name">
-              </mat-form-field>
+          <mat-form-field class="app-form-element">
+            <input matInput placeholder="Template name">
+          </mat-form-field>
 
-              <div class="form-element">
-                <mat-checkbox formControlName="validate" value="1">
-                  Delete Source
-                </mat-checkbox>
-              </div>
-            </mat-expansion-panel>
-          </mat-accordion>
-        </mat-card-content>
-        <mat-action-row>
-          <button mat-button color="primary" (click)="save()">
-            <mat-icon aria-label="edit">edit</mat-icon>
-            Edit
-          </button>
-          <button mat-button color="primary" (click)="execute()">
-            <mat-icon aria-label="send">send</mat-icon>
-            Execute
-          </button>
+          <div class="form-element">
+            <mat-checkbox formControlName="validate" value="1">
+              Delete Source
+            </mat-checkbox>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </mat-card-content>
+    <mat-action-row>
+      <button mat-button color="primary" (click)="save()">
+        <mat-icon aria-label="edit">edit</mat-icon>
+        Edit
+      </button>
+      <button mat-button color="primary" (click)="execute()">
+        <mat-icon aria-label="send">send</mat-icon>
+        Execute
+      </button>
 
-          <button mat-button color="warn" (click)="delete()">
-            <mat-icon aria-label="Delete">delete</mat-icon>
-            Delete
-          </button>
-        </mat-action-row>
-        -->
-      </mat-nav-list>
-  </mat-card-content>
-</mat-card>
+      <button mat-button color="warn" (click)="delete()">
+        <mat-icon aria-label="Delete">delete</mat-icon>
+        Delete
+      </button>
+    </mat-action-row>
+    -->
+</mat-list>
