--- a/src/app/pages/data-export/edit/data-export-edit.component.css
+++ b/src/app/pages/data-export/edit/data-export-edit.component.css
@@ -1,23 +1,12 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  min-width: 600px;
-  width: auto;
-}
-
-.container > * {
-  width: 100%;
-}
-
-.form {
-  display: flex;
-  padding-top: 6px;
+.app-edit-root {
+  overflow: auto;
 }
 
 .mat-form-field {
   flex-grow: 1;
+  width: 100%;
 }
 
-.mat-cell {
-  padding: 8px 8px 8px 0;
+.app-path-card {
+  margin-bottom: 5px;
 }
