--- a/src/app/pages/data-export/edit/data-export-edit.component.html
+++ b/src/app/pages/data-export/edit/data-export-edit.component.html
@@ -1,50 +1,54 @@
-<div class="container mat-typography">
-  <h2 class="mat-h2">Template properties</h2>
-  <mat-form-field class="app-form-element" fxFlex>
+<h2 mat-dialog-title class="mat-h2">Template properties</h2>
+<mat-dialog-content class="mat-typography">
+  <mat-form-field class="app-form-element">
     <input matInput placeholder="Name" [value]="template.name" />
   </mat-form-field>
 
-  <mat-checkbox fxFlex [checked]="template.deleteSource">Delete Source After Export</mat-checkbox>
-</div>
+  <mat-form-field class="app-form-element">
+      <mat-select placeholder="After Export" [value]="template.deleteSource">
+        <mat-option [value]="true">
+          Delete Source
+        </mat-option>
+        <mat-option [value]="false">
+          Don't Delete Source
+        </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <h2 class="mat-h2">Paths</h2>
+  <button mat-button color="primary" (click)="newPath()">
+      <mat-icon aria-label="add">add</mat-icon>
+      Add new path
+  </button>
+  <mat-card class="app-path-card" *ngFor="let path of template.paths">
+    <mat-card-content>
+        <mat-form-field class="app-form-element">
+            <input matInput placeholder="Source path" [value]="path.sourcePath" />
+        </mat-form-field>
+        <mat-form-field class="app-form-element">
+            <input matInput placeholder="Wild cards" [value]="path.wildcards" />
+        </mat-form-field>
+        <mat-form-field class="app-form-element">
+            <mat-select [value]="path.recursive">
+              <mat-option [value]="true">
+                Recursive
+              </mat-option>
+              <mat-option [value]="false">
+                Not Recursive
+              </mat-option>
+          </mat-select>
+        </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button color="warn" (click)="deletePath(path)">
+            <mat-icon aria-label="Delete">delete</mat-icon>
+            Delete
+        </button>
+    </mat-card-actions>
+  </mat-card>
 
-<mat-divider></mat-divider>
-<h2 class="mat-h2">Paths</h2>
-<button mat-button color="primary" (click)="newPath()">
-  <mat-icon aria-label="add">add</mat-icon>
-  Add new path
-</button>
-<mat-table [dataSource]="template.paths">
-  <ng-container matColumnDef="sourcePath">
-    <th mat-header-cell *matHeaderCellDef>SourcePath</th>
-    <td mat-cell *matCellDef="let element">
-      <mat-form-field class="app-form-element">
-        <input matInput [value]="element.sourcePath" />
-      </mat-form-field>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="wildcards">
-    <th mat-header-cell *matHeaderCellDef>Wildcards</th>
-    <td mat-cell *matCellDef="let element">
-      <mat-form-field class="app-form-element">
-        <input matInput [value]="element.wildcards" />
-      </mat-form-field>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="recursive">
-    <th mat-header-cell *matHeaderCellDef>Recursive</th>
-    <td mat-cell *matCellDef="let element">
-      <mat-checkbox [checked]="element.recursive">Delete Source</mat-checkbox>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</mat-table>
-
-<mat-action-row>
-  <button
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button
     mat-button
     [type]="submit"
     [disabled]="!formControl.valid"
@@ -54,4 +58,4 @@
     Save
   </button>
   <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
-</mat-action-row>
+</mat-dialog-actions>
