--- a/src/app/pages/data-export/edit/data-export-edit.component.html
+++ b/src/app/pages/data-export/edit/data-export-edit.component.html
@@ -53,11 +53,11 @@
     <button
     mat-button
     [type]="submit"
-    [disabled]="!formControl.valid"
     [mat-dialog-close]="1"
-    (click)="stopEdit()"
+    color="primary"
   >
+    <mat-icon aria-label="save">save_alt</mat-icon>
     Save
   </button>
-  <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
+  <button mat-button tabindex="-1" [mat-dialog-close]="0" color="warn">Cancel</button>
 </mat-dialog-actions>
