--- a/src/app/pages/data-export/edit/data-export-edit.component.html
+++ b/src/app/pages/data-export/edit/data-export-edit.component.html
@@ -6,10 +6,10 @@
 
   <mat-form-field class="app-form-element">
       <mat-select placeholder="After Export" [(ngModel)]="template.deleteSource">
-        <mat-option value="true">
+        <mat-option [value]="true">
           Delete Source
         </mat-option>
-        <mat-option value="false">
+        <mat-option [value]="false">
           Don't Delete Source
         </mat-option>
     </mat-select>
@@ -26,8 +26,19 @@
         <mat-form-field class="app-form-element">
             <input matInput placeholder="Source path" [(ngModel)]="paths[index].sourcePath" />
         </mat-form-field>
-        <mat-form-field class="app-form-element">
-            <input matInput placeholder="Wild cards" [(ngModel)]="paths[index].wildcards" />
+        <mat-form-field class="example-chip-list">
+          <mat-chip-list #chipList>
+            <mat-chip *ngFor="let wildcard of paths[index].wildcards" [selectable]="selectable"
+                      [removable]="removable" (removed)="removeWildcard(index, wildcard)">
+              {{wildcard}}
+              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+            </mat-chip>
+            <input placeholder="Wild cards"
+                    [matChipInputFor]="chipList"
+                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    [matChipInputAddOnBlur]="addOnBlur"
+                    (matChipInputTokenEnd)="addWildcard(index, $event)">
+          </mat-chip-list>
         </mat-form-field>
         <mat-form-field class="app-form-element">
           <mat-select placeholder='File lookup' [(ngModel)]="paths[index].recursive">
@@ -52,7 +63,6 @@
 <mat-dialog-actions align="end">
     <button
     mat-button
-    [type]="submit"
     [mat-dialog-close]="1"
     color="primary"
   >
