--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <button
           type="button"
           aria-label="Toggle sidenav"
-          mat-icon-button
+          mat-button
           (click)="drawer.toggle()"
           *ngIf="currentUser">
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
