--- a/src/app/pages/data-export/data-export.component.css
+++ b/src/app/pages/data-export/data-export.component.css
@@ -1,70 +1,20 @@
-/* Structure */
-.container {
-  display: flex;
-  flex-direction: column;
-}
-
-/* Toolbar */
-.spacer {
-  flex: 1 1 auto;
-}
-
-/* Filter */
-.form {
-  min-height: 56px;
-  max-height: 56px;
-  display: flex;
-  align-items: center;
-  padding: 8px 24px 0;
-  font-size: 20px;
-  justify-content: space-between;
-  border-bottom: 1px solid transparent;
-}
-
-.mat-form-field {
-  font-size: 14px;
-  flex-grow: 1;
-  margin-top: 8px;
-}
-
-/* Mat table */
-.no-results {
-  display: flex;
-  justify-content: center;
-  padding: 14px;
-  font-size: 14px;
-  font-style: italic;
-}
-
-.mat-cell:nth-child(1),
-.mat-header-cell:nth-child(1){
-  flex: 0 0 6%;
-}
-
-.mat-cell:nth-child(2),
-.mat-header-cell:nth-child(2){
-  flex: 0 0 30%;
-}
-
-.mat-cell:nth-child(3),
-.mat-header-cell:nth-child(3){
-  flex: 0 0 6%;
-}
-
-.mat-cell:nth-child(7),
-.mat-header-cell:nth-child(7){
-  flex: 0 0 7%;
-}
-
-.app-form-element {
-  padding: 5px 0px 25px 2px;
-  width: 100%;
-}
-
-.data-export-card {
-  padding: 5px;
+.data-export-root {
+  max-width: 40em;
 }
 
 .data-export-template-name {
   flex: 1;
+  flex-grow: 1;
+}
+
+.data-export-flex-grow {
+  flex-grow: 1;
+}
+
+.data-export-spacer {
+  width: 100%;
+}
+
+.data-export-list {
+  margin-top: 10px;
 }
