--- a/src/app/pages/data-export/data-export.component.html
+++ b/src/app/pages/data-export/data-export.component.html
@@ -35,14 +35,14 @@
       <mat-icon mat-list-icon aria-label="Data Export Template"
         >archive</mat-icon
       >
-      <a
+      <button
         mat-button
         class="data-export-template-name"
         (click)="edit(index)"
-        matTooltip="Edit the template"
+        matTooltip="Edit the template2"
       >
         {{ template.name }}
-      </a>
+      </button>
       <span class="data-export-spacer"></span>
       <button
         mat-icon-button
