--- a/src/app/data-export/edit-template.component.html
+++ b/src/app/data-export/edit-template.component.html
@@ -1,73 +1,112 @@
 <h2 mat-dialog-title class="mat-h2">Template properties</h2>
-<mat-dialog-content class="mat-typography">
-  <mat-form-field class="app-form-element">
-    <input matInput placeholder="Name" [(ngModel)]="template.name" />
-  </mat-form-field>
+<mat-dialog-content class="mat-typography" fxLayout="column">
+  <div fxLayout="row" fxLayoutGap="20px">
+    <mat-form-field>
+      <input matInput placeholder="Name" [(ngModel)]="template.name" />
+    </mat-form-field>
 
-  <mat-form-field class="app-form-element">
-      <mat-select placeholder="After Export" [(ngModel)]="template.deleteSource">
-        <mat-option [value]="true">
-          Delete Source
-        </mat-option>
-        <mat-option [value]="false">
-          Don't Delete Source
-        </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <h2 class="mat-h2">Paths</h2>
-  <mat-toolbar align="end">
-      <button mat-button color="primary" (click)="newPath()" style="margin-left: auto">
-          <mat-icon aria-label="add">add</mat-icon>
-          Add new path
-      </button>
-  </mat-toolbar>
-  <mat-card class="app-path-card" *ngFor="let path of paths;let index = index;trackBy:trackByIndex;">
-    <mat-card-content>
-        <mat-form-field class="app-form-element">
-            <input matInput placeholder="Source path" [(ngModel)]="paths[index].sourcePath" />
-        </mat-form-field>
-        <mat-form-field class="example-chip-list">
-          <mat-chip-list #chipList>
-            <mat-chip *ngFor="let wildcard of paths[index].wildcards" [selectable]="selectable"
-                      [removable]="removable" (removed)="removeWildcard(index, wildcard)">
-              {{wildcard}}
-              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-            </mat-chip>
-            <input placeholder="Wild cards"
-                    [matChipInputFor]="chipList"
-                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur"
-                    (matChipInputTokenEnd)="addWildcard(index, $event)">
-          </mat-chip-list>
-        </mat-form-field>
-        <mat-form-field class="app-form-element">
-          <mat-select placeholder='File lookup' [(ngModel)]="paths[index].recursive">
-            <mat-option [value]="true">
-              Recursive
-            </mat-option>
-            <mat-option [value]="false">
-              Not Recursive
-            </mat-option>
-        </mat-select>
-        </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions align="end">
-        <button mat-button color="warn" (click)="deletePath(path)">
+    <mat-form-field fxFlex="120px">
+      <mat-select
+        placeholder="After Export"
+        [(ngModel)]="template.deleteSource"
+      >
+        <mat-option [value]="true"> Delete Source </mat-option>
+        <mat-option [value]="false"> Don't Delete Source </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <h3 class="mat-h2 data-export-spacer" fxLayout="row">
+    Paths
+    <button
+      mat-icon-button
+      align="end"
+      color="primary"
+      (click)="newPath()"
+      matTooltip="Add new path"
+      style="margin-left: auto"
+    >
+      <mat-icon aria-label="add">add</mat-icon>
+    </button>
+  </h3>
+  <mat-accordion displayMode="flat">
+    <mat-expansion-panel
+      *ngFor="let path of paths; let index = index; trackBy: trackByIndex"
+    >
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <span class="data-export-icon">
+            <mat-icon
+              class="mat-icon"
+              *ngIf="paths[index].recursive; else notRecursive"
+              aria-label="pathIcon"
+              >photo_library</mat-icon
+            >
+            <ng-template #notRecursive>
+              <mat-icon aria-label="pathIcon">photo</mat-icon>
+            </ng-template>
+          </span>
+          {{ paths[index].sourcePath }}
+        </mat-panel-title>
+        <mat-panel-description>
+          <span fxFlex="auto"> {{ paths[index].wildcards }} </span>
+          <button
+            mat-icon-button
+            color="warn"
+            (click)="deletePath(path); $event.stopPropagation()"
+            matTooltip="Delete the path"
+          >
             <mat-icon aria-label="Delete">delete</mat-icon>
-            Delete
-        </button>
-    </mat-card-actions>
-  </mat-card>
+          </button>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
 
+      <div fxLayout="row" fxLayoutGap="20px">
+        <mat-form-field class="app-form-element">
+          <input
+            matInput
+            placeholder="Source path"
+            [(ngModel)]="paths[index].sourcePath"
+          />
+        </mat-form-field>
+        <mat-form-field class="app-form-element" fxFlex="120px">
+          <mat-select
+            placeholder="File lookup"
+            [(ngModel)]="paths[index].recursive"
+          >
+            <mat-option [value]="true"> Recursive </mat-option>
+            <mat-option [value]="false"> Not Recursive </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <mat-form-field class="example-chip-list">
+        <mat-chip-list #chipList>
+          <mat-chip
+            *ngFor="let wildcard of paths[index].wildcards"
+            [selectable]="selectable"
+            [removable]="removable"
+            (removed)="removeWildcard(index, wildcard)"
+          >
+            {{ wildcard }}
+            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+          </mat-chip>
+          <input
+            placeholder="Wild cards"
+            [matChipInputFor]="chipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="addWildcard(index, $event)"
+          />
+        </mat-chip-list>
+      </mat-form-field>
+    </mat-expansion-panel>
+  </mat-accordion>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button
-    mat-button
-    [mat-dialog-close]="1"
-    color="primary"
-  >
+  <button mat-button [mat-dialog-close]="1" color="primary">
     <mat-icon aria-label="save">save_alt</mat-icon>
     Save
   </button>
-  <button mat-button tabindex="-1" [mat-dialog-close]="0" color="warn">Cancel</button>
+  <button mat-button tabindex="-1" [mat-dialog-close]="0" color="warn">
+    Cancel
+  </button>
 </mat-dialog-actions>
